--- a/firstspa/src/App.css
+++ b/firstspa/src/App.css
@@ -20,3 +20,39 @@
 .App-link {
   color: #09d3ac;
 }
+
+.content-main-image {
+  width: 1000px;
+}
+
+.app-wrapper {
+  margin: 0 auto;
+  width: 1000px;
+
+  display: grid; /* set that all the first level children have behavior as grid-elements */ 
+
+  grid-template-areas: "h h" "n c";
+
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+
+}
+
+.header {
+  grid-area: h;
+  background-color: green;
+}
+
+.header img {
+  width: 50px;
+}
+
+.nav {
+  grid-area: n;
+  background-color: burlywood;
+}
+
+.content {
+  grid-area: c;
+  background-color: lightblue;
+}
