--- a/firstspa/src/components/Navbar/Navbar.module.css
+++ b/firstspa/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,17 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
+    padding: 20px;
 }
 
 .item {
     color: white;
+}
+
+.item a{
+    text-decoration: none;
+}
+
+.item a.active {
+    color: gold;
 }
